<resources>
    <string name="app_name">Football Table</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standings">Standings</string>
    <string name="la_liga">La Liga</string>
    <string name="spain">Spain</string>
    <string name="team">Team</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="w">W</string>
    <string name="gp">Gp</string>
    <string name="pts">Pts</string>
    <string name="matches">Matches</string>
    <string name="table">Table</string>
    <string name="_0">0</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
</resources>