<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#292626"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/club_flag_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/club_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/real_madrid"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/draw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/losses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/wins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/game_played"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>